サイドバーのフロント実装

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,11 @@
 <div class="wrapper">
-  <%= render "side_bar" %>
-  <%= render "main_chat" %>
+  <%# サイドバー -------------------------------------------%>
+  <div id="side_bar_container">
+    <%= render "side_bar" %>
+  </div>
+
+  <%# メインチャット------------------------------------------- %>
+  <div id="main_chat_container">
+    <%= render "main_chat" %>
+  </div>
 </div>
