--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -63,19 +63,105 @@ a{
   width: calc(100vw - 300px);
 }
 
+/* メインチャット header------------------------------------------- */
 #main_chat_header{
   padding: 0 40px;
   height: 100px;
+  display: flex;
+  justify-content: space-between;
 }
 
+#header_title{
+  font-size: 24px;
+  color:#333;
+  margin-top: 36px;
+}
+
+#end_btn{
+  color: darkred;
+  padding: 20px;
+  border: 1px solid darkred;
+  height: fit-content;
+  margin: auto 0;
+}
+
+/* メインチャット content------------------------------------------- */
 #main_chat_content{
   background-color: #FAFAFA;
   height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
+  overflow: scroll;
 }
+
+.posting_title{
+  display: flex;
+  align-items: center;
+  margin:10px 0;
+}
+
+.posting_container{
+  margin-bottom: 40px;
+}
+
+.posting_name{
+  font-size:16px;
+  color:#434A54;
+  margin: 0 10px 0 0;
+}
+
+.posting_time{
+  font-size:12px;
+  color:#999
+}
+
+.posting_content{
+  margin: 0;
+  font-size: 14px;
+}
+/* メインチャット message form------------------------------------------- */
 #main_chat_message{
   background-color: #DDDDDD;
   height: 90px;
   padding: 20px 40px;
 }
 
+#message_form{
+  display: flex;
+  height: 50px;
+}
+
+.form-input {
+  background-color: white;
+  display: flex;
+  width: 100%;
+}
+
+#text_form{
+  background-color: white;
+  height: 100%;
+  width: 100%;
+  padding-left: 10px;
+  border: none;
+}
+
+#send_btn{
+  background-color: #38aef0;
+  color: white;
+  font-size: 16px;
+  margin-left: 15px;
+  padding: 0 20px;
+  border: none;
+}
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
+}
