--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -21,10 +21,11 @@ a{
   justify-content: space-between;
 }
 
-#account_link{
+#account_link a{
   color: #FAFAFA;
   font-size: 16px;
   line-height: 100px;
+  text-decoration: none;
 }
 
 #create_new{
