--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -29,12 +29,14 @@ a{
 }
 
 #create_new{
+  margin: auto 0;
+}
+
+#create_new a{
   color: deepskyblue;
   font-size: 10px;
   padding: 14px;
-  margin: auto 0;
   border: 1px solid lightblue;
-
 }
 
 #side_bar_room{
