--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -24,14 +24,14 @@
   </div>
   <%# メインチャット message form ----------------------------------------------- %>
   <div id="main_chat_message">
-    <form action="#" id="message_form">
-      <div class="form-input">
-        <input type="text" placeholder="type a message" id="text_form">
-        <label class="form-image">
-        <span class="image-file">画像</span>
-        <input type="file" class="hidden">
-        </label>
-      </div>
-      <input type="submit" value="送信" id="send_btn">
-    </form>
+      <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
+        <div class="form-input">
+          <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
+          <label class="form-image">
+            <span class="image-file">画像</span>
+            <%= f.file_field :image, class: 'hidden' %>
+          </label>
+        </div>
+        <%= f.submit '送信', class: 'form-submit' %>
+      <% end %>
   </div>
