--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -96,28 +96,28 @@ a{
   overflow: scroll;
 }
 
-.posting_title{
+.message-user{
   display: flex;
   align-items: center;
   margin:10px 0;
 }
 
-.posting_container{
+.message{
   margin-bottom: 40px;
 }
 
-.posting_name{
+.message-user{
   font-size:16px;
   color:#434A54;
   margin: 0 10px 0 0;
 }
 
-.posting_time{
+.message-date{
   font-size:12px;
   color:#999
 }
 
-.posting_content{
+.message-content{
   margin: 0;
   font-size: 14px;
 }
