--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -4,23 +4,8 @@
   </div>
 
   <%# メインチャット content ----------------------------------------------- %>
-  <div id="main_chat_content">
-    
-    <div class="posting_container">
-      <div class="posting_title">
-        <p class="posting_name">投稿者</p>
-        <time class="posting_time">2023/23/25(Mon) 17:50</time>
-      </div>
-      <p class="posting_content">Hello,World</p>
-    </div>
-
-    <div class="posting_container">
-      <div class="posting_title">
-        <p class="posting_name">投稿者 2</p>
-        <time class="posting_time">2023/23/25(Mon) 17:50</time>
-      </div>
-      <p class="posting_content">Hello,World</p>
-    </div>
+  <div id="main_chat_content">    
+    <%= render partial: 'message', collection: @messages %>
   </div>
   <%# メインチャット message form ----------------------------------------------- %>
   <div id="main_chat_message">
