チャットルーム名の表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,5 +1,5 @@
   <div id="main_chat_header">
-    <p id="header_title">RoomName</p>
+    <p id="header_title"><%= @room.name %></p>
     <a href="#" id="end_btn">チャットを終了する</a>
   </div>
 
